TAG: qcreports_db-6-0-12-11
DATE: 08/14/2018
STAFF: lec
CHANGES: TR12902/mgd/GXD_SpecNoAge.sql

TAG: qcreports_db-6-0-12-10
DATE: 08/09/2018
STAFF: sc
CHANGES: TR12850 replace mgd/PRB_StrainByDate.sql
    with mgd/PRB_Strain_NonStdNoAttributes.py
    keep as Strains report #5 same text, different report

TAG: qcreports_db-6-0-12-9
DATE: 08/08/2018
STAFF: sc
CHANGES: TR12901
New: mgd/ALL_ConditionalNeedsReview.py

TAG: qcreports_db-6-0-12-8
DATE: 07/24/2018
STAFF: lec
CHANGES: TR12900
mgd/GXD_Stats.py
mgd/GXD_SpecTheilerAge.py

TAG: qcreports_db-6-0-12-7
DATE: 07/12/2018
STAFF: lec
CHANGES: TR12894/DO annotation counts
weekly/ALL_Progress.py

TAG: qcreports_db-6-0-12-6
DATE: 05/17/2018
STAFF: sc
CHANGES: TR12862 New Recombinase allele without driver gene report.

TAG: qcreports_db-6-0-12-5
DATE: 05/16/2018
STAFF: lec 
CHANGES: TR12868/noctua cleanup
#	modified:   mgd/GO_EvidenceProperty.py
#	modified:   mgd/GO_stats.py

TAG: qcreports_db-6-0-12-4
DATE: 05/11/2018
STAFF: lec 
CHANGES: TR12850/exclude all strains created by user csmith
mgd/PRB_StrainByDate.sql

TAG: qcreports_db-6-0-12-3
DATE: 05/11/2018
STAFF: lec 
CHANGES: TR12858/MRK_QTL.py
add J: and counts to MRK_QTL_2.rpt

TAG: qcreports_db-6-0-12-2
DATE: 04/06/2018
STAFF: lec
CHANGES: TR12808/ALL_Progress.py

TAG: qcreports_db-6-0-12-1
DATE: 03/20/2018
STAFF: lec
CHANGES: TR12662/GMC
ALL_Notes.py/sequenceNum removed

TAG: qcreports_db-6-0-11-34
TAG: qcreports_db-6-0-11-33
DATE: 03/08/2018
STAFF: sc
CHANGES: TR12807
Update MRK_GOIEA D report ref in gxd logic to include Full-coded status.

TAG: qcreports_db-6-0-11-32
DATE: 02/26/2018
STAFF: sc
CHANGES: TR12779 - Recombinase reporter check
1) Added monthly/RECOMB_ReporterCheck.py and updated index file

TAG: qcreports_db-6-0-11-31
DATE: 02/26/2018
STAFF: sc
CHANGES:
1) TR12778 - ensuring correct gene for Cre portal assays
New RECOMB_Reporter.sql monthly report, qcr.shtml updated

TAG: qcreports_db-6-0-11-30
DATE: 02/26/2018
STAFF: lec
CHANGES: