@@ -1,3 +1,10 @@
+TAG: qcreports_db-6-0-12-12
+DATE: 08/23/2018
+STAFF: sc
+CHANGES: TR12940 
+1) retire GXD_HTNoMasterBib report
+2) modify GXD_WithdrawnMarker report
+
 TAG: qcreports_db-6-0-12-11
 DATE: 08/14/2018
 STAFF: lec
